# EC327-assignments

./: README.md
HW1/: Luke_McCarthy-hw1-1.txt  Luke_McCarthy-hw1-2.txt  Luke_McCarthy-hw1-3-6.txt
HW2/: hw2_problem1.h  hw2_problem2.h  hw2_problem4.h  hw2_problem5.h  hw2_structs.h  luke_mccarthy-hw2-1.cpp  luke_mccarthy-hw2-2.cpp  luke_mccarthy-hw2-3.txt  luke_mccarthy-hw2-4.cpp  luke_mccarthy-hw2-5.cpp  main  main.cpp  run.sh
HW3/: hw3_problem1.h  hw3_problem2.h  hw3_problem3.h  hw3_problem5.h  luke_mccarthy-hw3-1.cpp  luke_mccarthy-hw3-2.cpp  luke_mccarthy-hw3-3.cpp  luke_mccarthy-hw3-4.txt  luke_mccarthy-hw3-5.cpp  main  main.cpp  run.sh
HW4/: ComplexNumber.h  GaussianInteger.cpp  GaussianInteger.h  main  main.cpp  run.sh
HW4/src/: ComplexNumber.h  GaussianInteger.cpp  GaussianInteger.h  Quaternion.cpp  Quaternion.h
HW4/tests/: GaussianIntegerConstructorTests.cpp  GaussianIntegerMethodTests.cpp  GaussianIntegerOperatorTests.cpp  QuaternionConstructorTests.cpp  QuaternionEdgeCaseTests.cpp  QuaternionMethodTests.cpp  QuaternionOperatorTests.cpp
HW5/: .gitignore  CMakeLists.txt
HW5/src/: Leaderboard.cpp  Leaderboard.h  Leaderboard.txt  PolishNotation.cpp  PolishNotation.h  main.cpp
HW5/tests/: leaderboard_tests.cpp  polish_tests.cpp
LAB2/: lab2_problem1.h  lab2_problem2.h  lab2_problem3.h  lab2_problem4.h  luke_mccarthy-lab2-1.cpp  luke_mccarthy-lab2-2.cpp  luke_mccarthy-lab2-3.cpp  luke_mccarthy-lab2-4.cpp  main  main.cpp  run.sh
LAB3/: helpers.cpp  helpers.h  lab3_problem1.h  lab3_problem2.h  lab3_problem3.h  lab3_problem4.h  luke_mccarthy-lab3-1.cpp  luke_mccarthy-lab3-2.cpp  luke_mccarthy-lab3-3.cpp  luke_mccarthy-lab3-4.cpp  main  main.cpp
LAB4/: lab4_problem1.h  lab4_problem2.h  lab4_problem3.h  lab4_problem4.h  luke_mccarthy-lab4-1.cpp  luke_mccarthy-lab4-2.cpp  luke_mccarthy-lab4-3.cpp  luke_mccarthy-lab4-4.cpp  main  main.cpp
LAB4/csv_files/: complex.csv  mixed_fields.csv  quoted_fields.csv
LAB4/text_files/: mixed_case.txt  special_chars.txt
LAB5/: .gitignore  CMakeLists.txt
LAB5/src/: lab5_problem1.h  lab5_problem2.h  luke_mccarthy-lab5-1.cpp  luke_mccarthy-lab5-2.cpp
LAB5/tests/: graph_hop_tests.cpp  graph_tests.cpp
demos/factorial/: factorial_correct  factorial_correct.cpp  factorial_wrong  factorial_wrong.cpp  main.cpp  my_tests
exam1extra/: .gitignore  CMakeLists.txt  Makefile
exam1extra/src/: examextra_problem1.h  examextra_problem2.h  luke_mccarthy-examexra-1.cpp  luke_mccarthy-examextra-1.cpp  luke_mccarthy-examextra-2.cpp  main.cpp
exam1extra/tests/: examextra1_tests.cpp  examextra2_tests.cpp  test.cpp  test_main.cpp
template/: CMakeLists.txt
template/tests/: test.cpp
